[gd_scene load_steps=11 format=3 uid="uid://d2jd4kgm6of3u"]

[ext_resource type="Theme" uid="uid://b071l4h825547" path="res://UI/themes/menu_theme.tres" id="1_pseyc"]
[ext_resource type="Script" path="res://UI/options.gd" id="1_sp3r7"]
[ext_resource type="Texture2D" uid="uid://bhsf15bgco6me" path="res://Art/my art/UI/buton_off.png" id="2_gig11"]
[ext_resource type="Texture2D" uid="uid://bajc3mj561wla" path="res://Art/my art/UI/buton_on.png" id="3_8ay68"]
[ext_resource type="PackedScene" uid="uid://b5a6vy2qc1ku3" path="res://UI/Buttons/options_buttons/keybind.tscn" id="3_ji8s8"]
[ext_resource type="Texture2D" uid="uid://dm1ducduojq42" path="res://Art/my art/UI/buton_disabled.png" id="5_fqneu"]
[ext_resource type="Texture2D" uid="uid://b1vd8cgnfhxgm" path="res://Art/my art/UI/button_hover.png" id="6_ey7x5"]
[ext_resource type="PackedScene" uid="uid://cbk4qkmo4gdne" path="res://background_music.tscn" id="7_rl5ro"]
[ext_resource type="Script" path="res://UI/Press.gd" id="8_knlq1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6vp1v"]

[node name="options" type="PopupPanel"]
position = Vector2i(837, 295)
size = Vector2i(950, 620)
visible = true
theme = ExtResource("1_pseyc")
theme_override_styles/panel = SubResource("StyleBoxEmpty_6vp1v")
script = ExtResource("1_sp3r7")
Keybind = ExtResource("3_ji8s8")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 950.0
offset_bottom = 620.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "options"
horizontal_alignment = 1
uppercase = true

[node name="Reset" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_gig11")
texture_pressed = ExtResource("3_8ay68")
texture_hover = ExtResource("6_ey7x5")
texture_disabled = ExtResource("5_fqneu")
texture_focused = ExtResource("3_8ay68")

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Reset"]
layout_mode = 0
offset_right = 700.0
offset_bottom = 85.0
text = "Reset"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Visual"
horizontal_alignment = 1
uppercase = true

[node name="Fullscreen" type="CheckButton" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = " Fullscreen"

[node name="Vsync" type="OptionButton" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "Vsync Disabled"
popup/item_0/id = 0
popup/item_1/text = "Vsync Enabled"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = " Master"

[node name="Master" type="HSlider" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Music  "

[node name="Music" type="HSlider" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " Sound "

[node name="Sound" type="HSlider" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Keybinds"
horizontal_alignment = 1

[node name="Press" type="AcceptDialog" parent="."]
size = Vector2i(457, 133)
visible = true
dialog_text = "[Press any button!]"
script = ExtResource("8_knlq1")

[node name="music" type="Node" parent="."]

[node name="BackgroundMusic" parent="music" instance=ExtResource("7_rl5ro")]
volume_db = -20.0

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/Vsync" to="." method="_on_vsync_item_selected"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer3/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer2/Sound" to="." method="_on_sound_value_changed"]
[connection signal="confirmed" from="Press" to="." method="_on_press_confirmed"]
[connection signal="event_selected" from="Press" to="." method="_on_press_event_selected"]
